  * removed "--no-dbus" and rather use -d to enable dbus
  * added logging to log file
  * moved closelog (for syslogging) to just before the program exit so we can
    log up to the end of running
  * Changed hit lines to use "||" since descriptions in block file had "|" in
    them.
  * Change order of start up to make sure daemon starts correcly and returns if
    it started correctly
  * Changed to have just a ASCII parse and binary parse

 -- jre <jre-phoenix@users.sourceforge.net>  Thu, 22 Oct 2009 23:02:37 +0200

nfblock (0.6.2-1) unstable; urgency=low

  * New upstream release
  * blocklistpro.com downloader update

 -- Jindrich Makovicka <makovick@gmail.com>  Sun, 08 Mar 2009 10:24:42 +0100

nfblock (0.6.1-1) unstable; urgency=low

  * New upstream release
  * download list from blocklistpro.com
  * finish the nfblockd -> nfblock transition in update scripts

 -- Jindrich Makovicka <makovick@gmail.com>  Wed, 31 Dec 2008 16:40:21 +0100

nfblock (0.6-1) unstable; urgency=low

  * New upstream release
  * D-Bus support
  * Conversion of range description character sets

 -- Jindrich Makovicka <makovick@gmail.com>  Sat, 13 Sep 2008 12:03:03 +0200

nfblock (0.5-1) unstable; urgency=low

  * New upstream release
  * Proper PID file support

 -- Jindrich Makovicka <makovick@gmail.com>  Sat, 31 May 2008 13:11:56 +0200

nfblock (0.4-1) unstable; urgency=low

  * New upstream release
  * List format autodetection fix

 -- Jindrich Makovicka <makovick@gmail.com>  Sat, 31 May 2008 12:15:09 +0200

nfblock (0.3-1) unstable; urgency=low

  * New upstream release
  * Multiple blocklists support

 -- Jindrich Makovicka <makovick@gmail.com>  Thu, 30 Aug 2007 08:15:11 +0200

nfblock (0.2-1) unstable; urgency=low

  * More debian stuff.

 -- Jindrich Makovicka <makovick@gmail.com>  Sat, 25 Aug 2007 10:26:18 +0200

nfblock (0.1-1) unstable; urgency=low

  * Initial release.

 -- Jindrich Makovicka <makovick@gmail.com>  Sun, 12 Aug 2007 22:01:00 +0200