@@ -198,6 +198,12 @@ case "$1" in
             dump_stats
         fi
         ;;
+    'email_stats')
+        status_of_proc $DAEMON $NAME > /dev/null 2>&1
+        if [ "$?" -eq 0 ] ; then
+            email_stats
+        fi
+        ;;
     'reset_stats')
         status_of_proc $DAEMON $NAME > /dev/null 2>&1
         if [ "$?" -eq 0 ] ; then
